update index page.

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -2,7 +2,7 @@ extends ../layouts/default.pug
 
 block config
 
-    - var pageTitle = 'Masterclass Rota do Programador'
+    - var pageTitle = '{ Academia do Programador }'
 
 append css
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/lity/2.4.0/lity.min.css')
@@ -33,9 +33,8 @@ block content
             .container
                 .row.justify-content-center
                     .col-xl-8.col-lg-10.text-center(data-aos='fade')
-                        h1.page-header-title Que bom ter você conosco!
-                        p.page-header-text.mb-5 Agora que a sua inscrição para a <strong>Masterclass Rota do Programador</strong> foi confirmada, reserve na sua agenda o <strong>14/05/2020 às 19 horas</strong>.
-                        p.page-header-text.mb-5 <strong>Você receberá um e-mail no dia 14/05/2020 com o link da Masterclass.</strong>
+                        h1.page-header-title { Academia do Programador }
+                        p.page-header-text.mb-5 As inscrições ainda não estão liberadas! Espere um pouco mais ...
                         
                 
 
