--- a/src/pug/pages/mixins/footer.pug
+++ b/src/pug/pages/mixins/footer.pug
@@ -8,6 +8,6 @@ mixin footer(options)
             .container
                 .row.align-items-center
                     .col-md-6.small
-                        | Copyright &copy; { Dicas de Programação } 2020
+                        | Copyright &copy; { Academia do Programador } 2020
                     .col-md-6.text-md-right.small
                         a(href='https://dicasdeprogramacao.com.br/politica-de-privacidade/') Política de Privacidade
