--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -26,7 +26,7 @@ block content
         svgBorderAngled: false,
         svgBorderRounded: false,
         svgBorderWaves: true,
-        svgBorderFill: 'text-dark'
+        svgBorderFill: 'text-light'
     })
 
         .page-header-content.mb-n5
