change checkout link.

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -37,7 +37,7 @@ block content
                         p.page-header-text.mb-5 Com a { Academia do Programador } você sairá do zero e realizará o sonho de se tornar um programador profissional em menos de 6 meses.
                         p.page-header-text.mb-5 Você vai seguir um caminho bem definido, focado em te transformar em um programador com uma excelente base técnica.
                         
-                        a.btn.btn-primary.btn-marketing.btn-block.rounded-pill.mt-4(href="https://pay.hotmart.com/A5013488A") Garanta a sua vaga!
+                        a.btn.btn-primary.btn-marketing.btn-block.rounded-pill.mt-4(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Garanta a sua vaga!
 
 
 
@@ -59,7 +59,7 @@ block content
                         img.avatar-lp(src='/assets/img/foto-gustavo.jpg')
                         p.page-header-text.mb-5 <strong>Gustavo Furtado</strong> é Mestre em Computação Aplicada, Engenheiro da Computação, criador do blog { Dicas de Programação } por onde já passaram mais de 3 milhões de pessoas, em sua maioria iniciantes em programação.
                         p.page-header-text.mb-5 Tem mais de 15 anos de experiência como desenvolvedor de softwares, tendo trabalhado com diversas linguagens de programação, frameworks, tecnicas e metodologias.
-                        a.btn.btn-primary.btn-marketing.btn-block.rounded-pill.mt-4(href="https://pay.hotmart.com/A5013488A") Quero trilhar este caminho!
+                        a.btn.btn-primary.btn-marketing.btn-block.rounded-pill.mt-4(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Quero trilhar este caminho!
                         
 
           
