--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -12,6 +12,38 @@ append css
         #layoutDefault {
             background: #1f2d41 !important;
         }
+        .page-header-dark {
+            padding-top: 4rem;
+        }
+        .menu {
+            margin-top: 1.5rem;
+        }
+        .item-menu {
+            margin-top: 2rem;
+        }
+        .item-menu-text {
+            padding-left: 3rem;
+            padding-top: 0.5rem;
+        }
+        .card-text {
+            color: #242a85;
+        }
+        .video {
+            padding-top: 2rem;
+        }
+        .video-container {
+            position: relative;
+            padding-bottom: 56.25%;
+            height: 0;
+            overflow: hidden;
+        }
+
+        .video-container iframe, .video-container object, .video-container embed {
+            position: absolute;
+            top: 0; left: 0;
+            width: 100%;
+            height: 100%;
+        }
 
 block content
 
@@ -32,12 +64,16 @@ block content
         .page-header-content.mb-n5
             .container
                 .row.justify-content-center
-                    .col-xl-8.col-lg-10.text-center(data-aos='fade')
-                        h1.page-header-title { Academia do Programador }
-                        p.page-header-text.mb-5 Com a { Academia do Programador } você sairá do zero e realizará o sonho de se tornar um programador profissional em menos de 6 meses.
-                        p.page-header-text.mb-5 Você vai seguir um caminho bem definido, focado em te transformar em um programador com uma excelente base técnica.
-                        
-                        a.btn.btn-primary.btn-marketing.btn-block.rounded-pill.mt-4(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Garanta a sua vaga!
+                    .col-xl-9.col-lg-10.text-center(data-aos='fade')
+                        h1.page-header-title Inscrições abertas para a <br/>{ Academia do Programador }
+                        h2.page-header-text Torne-se um programador profissional em até seis meses e seja disputado pelo mercado, mesmo que você nunca tenha feito um algorítmo na vida.
+
+                        .video
+                            .video-container
+                                iframe(width="100%" height="450" src="https://www.youtube.com/embed/BrON6Ez1uJQ?autoplay=1&amp;controls=0&amp;rel=0&amp;showinfo=0&amp;enablejsapi=1&amp;modestbranding=1&amp;nologo=1&amp;theme=light&amp;wmode=opaque&amp;iv_load_policy=3&amp;fs=0" frameborder="0" allowfullscreen="")
+
+                        //a.btn.btn-xl.btn-secondary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Sim, vou garantir a minha vaga!
+                        a.btn.btn-xl.btn-secondary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=fplj7erg&checkoutMode=10&split=12&bid=1589319974564") Sim, vou garantir a minha vaga COM DESCONTO!
 
 
 
@@ -59,7 +95,9 @@ block content
                         img.avatar-lp(src='/assets/img/foto-gustavo.jpg')
                         p.page-header-text.mb-5 <strong>Gustavo Furtado</strong> é Mestre em Computação Aplicada, Engenheiro da Computação, criador do blog { Dicas de Programação } por onde já passaram mais de 3 milhões de pessoas, em sua maioria iniciantes em programação.
                         p.page-header-text.mb-5 Tem mais de 15 anos de experiência como desenvolvedor de softwares, tendo trabalhado com diversas linguagens de programação, frameworks, tecnicas e metodologias.
-                        a.btn.btn-primary.btn-marketing.btn-block.rounded-pill.mt-4(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Quero trilhar este caminho!
+                        
+                        //a.btn.btn-xl.btn-primary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Quero trilhar este caminho!
+                        a.btn.btn-xl.btn-primary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=fplj7erg&checkoutMode=10&split=12&bid=1589319974564") Quero trilhar este caminho!
                         
 
           
