fix media query for title

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -50,6 +50,11 @@ append css
         .timer {
             max-width: 100%;
         }
+        @media only screen and (max-width: 600px) {
+            .title {
+                font-size: 1.5rem !important;
+            }
+        }
 
 block content
 
@@ -75,7 +80,7 @@ block content
                         img.timer(src="https://s.mmgo.io/t/BwQV/scale_2x")
                         
                         h1.page-header-title.title Inscrições abertas para a <br/>{ Academia do Programador }
-                        h2.page-header-text Torne-se um programador profissional em até seis meses e seja disputado pelo mercado, mesmo que você nunca tenha feito um algorítmo na vida.
+                        //h2.page-header-text Torne-se um programador profissional em até seis meses e seja disputado pelo mercado, mesmo que você nunca tenha feito um algorítmo na vida.
 
                         .video
                             .video-container
