--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -55,6 +55,7 @@ append css
                 font-size: 1.5rem !important;
             }
         }
+    meta(property="og:image" content="https://academiadoprogramador.com.br/inscricoes-abertas.png")
 
 block content
 
