--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -2,7 +2,7 @@ extends ../layouts/default.pug
 
 block config
 
-    - var pageTitle = '{ Academia do Programador }'
+    - var pageTitle = 'Inscrições Abertas! - { Academia do Programador }'
 
 append css
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/lity/2.4.0/lity.min.css')
@@ -56,6 +56,7 @@ append css
             }
         }
     meta(property="og:image" content="https://academiadoprogramador.com.br/inscricoes-abertas.png")
+    meta(property="og:description" content="As inscrições para a { Academia do Programador } estão abertas. Não perca esta oportunidade!")
 
 block content
 
