--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -166,4 +166,12 @@ append scripts
         gtag('js', new Date());
         gtag('config', 'AW-993243463');
         gtag('event', 'conversion', {'send_to': 'AW-993243463/gomoCKeam88BEMfiztkD'});
+    // Global site tag (gtag.js) - Google Analytics
+    script(async, src="https://www.googletagmanager.com/gtag/js?id=UA-171709654-1")
+    script.
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-171709654-1');
+
 
