--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -86,7 +86,7 @@ block content
 
                         .video
                             .video-container
-                                iframe(width="100%" height="450" src="https://www.youtube.com/embed/75d64cyJk3c?autoplay=1&amp;controls=0&amp;rel=0&amp;showinfo=0&amp;enablejsapi=1&amp;modestbranding=1&amp;nologo=1&amp;theme=light&amp;wmode=opaque&amp;iv_load_policy=3&amp;fs=0" frameborder="0" allowfullscreen="")
+                                iframe(width="100%" height="450" src="https://www.youtube.com/embed/75d64cyJk3c?autoplay=1&amp;rel=0&amp;showinfo=0&amp;enablejsapi=1&amp;modestbranding=1&amp;nologo=1&amp;theme=light&amp;wmode=opaque&amp;iv_load_policy=3" frameborder="0" allowfullscreen="")
 
                         //a.btn.btn-xl.btn-secondary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Sim, vou garantir a minha vaga!
                         a.btn.btn-xl.btn-secondary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=fplj7erg&checkoutMode=10&split=12&bid=1589319974564") Sim, vou garantir a minha vaga COM DESCONTO!
