--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -174,4 +174,6 @@ append scripts
         gtag('js', new Date());
         gtag('config', 'UA-171709654-1');
 
+    //JivoChat
+    script(async, src="//code.jivosite.com/widget/PSW9chLIyg")
 
