--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -78,8 +78,8 @@ block content
             .container
                 .row.justify-content-center
                     .col-xl-9.col-lg-10.text-center(data-aos='fade')
-                        h2.page-header-text O desconto de até R$ 240,00 termina em:
-                        img.timer(src="https://s.mmgo.io/t/BwQV/scale_2x")
+                        //- h2.page-header-text O desconto de até R$ 240,00 termina em:
+                        //- img.timer(src="https://s.mmgo.io/t/BwQV/scale_2x")
                         
                         h1.page-header-title.title Inscrições abertas para a <br/>{ Academia do Programador }
                         //h2.page-header-text Torne-se um programador profissional em até seis meses e seja disputado pelo mercado, mesmo que você nunca tenha feito um algorítmo na vida.
@@ -88,8 +88,8 @@ block content
                             .video-container
                                 iframe(width="100%" height="450" src="https://www.youtube.com/embed/75d64cyJk3c?autoplay=1&amp;rel=0&amp;showinfo=0&amp;enablejsapi=1&amp;modestbranding=1&amp;nologo=1&amp;theme=light&amp;wmode=opaque&amp;iv_load_policy=3" frameborder="0" allowfullscreen="")
 
-                        //a.btn.btn-xl.btn-secondary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Sim, vou garantir a minha vaga!
-                        a.btn.btn-xl.btn-secondary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=fplj7erg&checkoutMode=10&split=12&bid=1589319974564") Sim, vou garantir a minha vaga COM DESCONTO!
+                        a.btn.btn-xl.btn-secondary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Sim, vou garantir a minha vaga!
+                        //- a.btn.btn-xl.btn-secondary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=fplj7erg&checkoutMode=10&split=12&bid=1589319974564") Sim, vou garantir a minha vaga COM DESCONTO!
 
 
 
@@ -113,8 +113,8 @@ block content
                         p.page-header-text.mb-5 <strong>Gustavo Furtado</strong> é Mestre em Computação Aplicada, Engenheiro da Computação, criador do blog { Dicas de Programação } por onde já passaram mais de 3 milhões de pessoas, em sua maioria iniciantes em programação.
                         p.page-header-text.mb-5 Tem mais de 15 anos de experiência como desenvolvedor de softwares, tendo trabalhado com diversas linguagens de programação, frameworks, tecnicas e metodologias.
                         
-                        //a.btn.btn-xl.btn-primary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Quero trilhar este caminho!
-                        a.btn.btn-xl.btn-primary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=fplj7erg&checkoutMode=10&split=12&bid=1589319974564") Quero trilhar este caminho!
+                        a.btn.btn-xl.btn-primary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Quero trilhar este caminho!
+                        //- a.btn.btn-xl.btn-primary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=fplj7erg&checkoutMode=10&split=12&bid=1589319974564") Quero trilhar este caminho!
                         
 
           
