--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -50,6 +50,13 @@ append css
         .timer {
             max-width: 100%;
         }
+        .page-header-dark {
+            padding-top: 0rem;
+        }
+        .page-header {
+            padding-top: 1rem;
+        }
+
         @media only screen and (max-width: 600px) {
             .title {
                 font-size: 1.5rem !important;
@@ -92,8 +99,6 @@ block content
                         //- a.btn.btn-xl.btn-secondary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=fplj7erg&checkoutMode=10&split=12&bid=1589319974564") Sim, vou garantir a minha vaga COM DESCONTO!
 
 
-
-
     include mixins/header.pug
     +header({
         pageHeaderBg: 'bg-light',
@@ -108,14 +113,123 @@ block content
             .container
                 .row.justify-content-center
                     .col-xl-8.col-lg-10.text-center(data-aos='slide-left')
+                        h1.page-header-title A jornada que iremos trilhar!
+                        
+                    .col-xl-12.col-lg-12.text-center(data-aos='slide-right')
+                        img(src="assets/img/rota-do-programador.png" width="100%")
+
+
+
+    include mixins/header.pug
+    +header({
+        pageHeaderBg: 'bg-dark',
+        pageHeaderStyle: 'page-header-dark',
+        svgBorderAngled: false,
+        svgBorderRounded: true,
+        svgBorderWaves: false,
+        svgBorderFill: 'text-light'
+    })
+
+        .page-header-content
+            .container
+                .row.justify-content-center
+                    .col-xl-8.col-lg-10.text-center(data-aos='slide-up')
+                        h1.page-header-title Mas cadê aquelas linguagens difíceis?
+
+                    .col-xl-8.col-lg-10(data-aos='slide-up')
+
+                        p.page-header-text Você pode até achar que precisaria aprender várias linguagens de programação, C, C++, Java, C#, PHP, Assembly, estruturas de dados complexas, padrões de projetos, arquitetura, etc.
+
+                        p.page-header-text Se você tem esse pensamento, sinto muito, dificilmente você se tornará um programador mesmo. Pois você ficará cada vez mais perdido e não conseguirá trilhar um caminho claro para se tornar um programador.
+
+                        p.page-header-text Mas se você quer um caminho otimizado que torna possível você se tornar um programador apto a conseguir um emprego no mercado de trabalho, dando um passo de cada vez.
+
+                        p.page-header-text Com rota que vamos trilhar, o ambiente de comunidade onde todos se ajudam e o suporte que você vai receber, você será capaz de sair do ZERO e se tornar um programador profissional no menor tempo.
+
+                        p.page-header-text Depois você pode até aprender as outras linguagens, frameworks, e outras coisa da moda. 😉
+
+
+                        a.btn.btn-xl.btn-secondary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Sim, vou garantir a minha vaga AGORA!
+                        //- a.btn.btn-xl.btn-secondary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=fplj7erg&checkoutMode=10&split=12&bid=1589319974564") Sim, vou garantir a minha vaga COM DESCONTO!
+
+
+
+    include mixins/header.pug
+    +header({
+        pageHeaderBg: 'bg-light',
+        pageHeaderStyle: 'page-header-light',
+        svgBorderAngled: true,
+        svgBorderRounded: false,
+        svgBorderWaves: false,
+        svgBorderFill: 'text-white'
+    })
+
+        .page-header-content.mb-n5
+            .container
+                .row.justify-content-center
+                    .col-xl-9.col-lg-10.text-center(data-aos='fade')
+                        //- h2.page-header-text O desconto de até R$ 240,00 termina em:
+                        //- img.timer(src="https://s.mmgo.io/t/BwQV/scale_2x")
+                        
+                        h1.page-header-title.title A { Academia do Programador } vai te destravar!
+                        h2.page-header-text Veja o que o Maurício e o Marcelo estão achando da { Academia do Programdor }.
+
+
+                    .col-xl-6.col-lg-6(data-aos='fade')
+                        .video
+                            .video-container
+                                iframe(width="100%" height="450" src="https://player.vimeo.com/video/436121457" frameborder="0" allowfullscreen="")
+
+                    .col-xl-6.col-lg-6
+                        .video
+                            .video-container
+                                iframe(width="100%" height="450" src="https://player.vimeo.com/video/436121324" frameborder="0" allowfullscreen="")
+
+
+    include mixins/header.pug
+    +header({
+        pageHeaderBg: 'bg-white',
+        pageHeaderStyle: 'page-header-white',
+        svgBorderAngled: false,
+        svgBorderRounded: true,
+        svgBorderWaves: false,
+        svgBorderFill: 'text-light'
+    })
+
+        .page-header-content
+            .container
+                .row.justify-content-center
+                    .col-xl-8.col-lg-10.text-center(data-aos='slide-up')
+                        h1.page-header-title Conheça toda a Jornada ...
+
+                    .col-xl-12.col-lg-12.text-center(data-aos='slide-up')
+                        img(src="assets/img/modulos-do-curso.png" width="100%")
+
+
+        br
+        br
+
+
+        .page-header-content
+            .container
+                .row.justify-content-center
+                    .col-xl-8.col-lg-10.text-center(data-aos='slide-left')
                         h1.page-header-title Conheça o instrutor!
                         img.avatar-lp(src='/assets/img/foto-gustavo.jpg')
                         p.page-header-text.mb-5 <strong>Gustavo Furtado</strong> é Mestre em Computação Aplicada, Engenheiro da Computação, criador do blog { Dicas de Programação } por onde já passaram mais de 3 milhões de pessoas, em sua maioria iniciantes em programação.
                         p.page-header-text.mb-5 Tem mais de 15 anos de experiência como desenvolvedor de softwares, tendo trabalhado com diversas linguagens de programação, frameworks, tecnicas e metodologias.
                         
-                        a.btn.btn-xl.btn-primary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Quero trilhar este caminho!
-                        //- a.btn.btn-xl.btn-primary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=fplj7erg&checkoutMode=10&split=12&bid=1589319974564") Quero trilhar este caminho!
-                        
+                        a.btn.btn-xl.btn-primary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Sim, quero me tornar um programador!
+                        //- a.btn.btn-xl.btn-primary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=fplj7erg&checkoutMode=10&split=12&bid=1589319974564") Sim, quero me tornar um programador!
+                   
+
+
+
+
+
+     
+
+     
 
           
                 
