--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -269,7 +269,7 @@ block content
                                     i(data-feather='package')
                                 h5 Acesso vitalício
                                 p.card-text Você terá acesso vitalício ao material da Academia do Programador
-                                i(data-feather='alert-triangle')
+                                i.text-orange(data-feather='alert-triangle')
                                 p.card-text.small.text-orange Somente para esta turma!
 
 
