--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -86,7 +86,7 @@ block content
                 .row.justify-content-center
                     .col-xl-9.col-lg-10.text-center(data-aos='fade')
                         h2.page-header-text O desconto de até R$ 240,00 termina em:
-                        img.timer(src="https://s.mmgo.io/t/Bwcy/scale_2x")
+                        img.timer(src="https://s.mmgo.io/t/Bwcv/scale_2x")
                         
                         h1.page-header-title.title Inscrições abertas para a <br/>{ Academia do Programador }
                         //h2.page-header-text Torne-se um programador profissional em até seis meses e seja disputado pelo mercado, mesmo que você nunca tenha feito um algorítmo na vida.
