--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -85,8 +85,8 @@ block content
             .container
                 .row.justify-content-center
                     .col-xl-9.col-lg-10.text-center(data-aos='fade')
-                        //- h2.page-header-text O desconto de até R$ 240,00 termina em:
-                        //- img.timer(src="https://s.mmgo.io/t/BwdD/scale_3x")
+                        h2.page-header-text As inscrições terminam em ...
+                        img.timer(src="https://s.mmgo.io/t/BwhM/scale_3x")
                         
                         h1.page-header-title.title Inscrições abertas para a <br/>{ Academia do Programador }
                         //h2.page-header-text Torne-se um programador profissional em até seis meses e seja disputado pelo mercado, mesmo que você nunca tenha feito um algorítmo na vida.
@@ -149,10 +149,6 @@ block content
                         p.page-header-text Depois que você construir uma base sólida, você pode até aprender as outras linguagens, frameworks, e as coisa da moda. Mas esquece isso no início da sua jornada. 😉
 
 
-                        a.btn.btn-xl.btn-secondary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Sim, vou garantir a minha vaga AGORA!
-                        //- a.btn.btn-xl.btn-secondary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=fplj7erg&checkoutMode=10&split=12&bid=1589319974564") Sim, vou garantir a minha vaga COM DESCONTO!
-
-
 
     include mixins/header.pug
     +header({
@@ -168,8 +164,6 @@ block content
             .container
                 .row.justify-content-center
                     .col-xl-9.col-lg-10.text-center(data-aos='fade')
-                        //- h2.page-header-text O desconto de até R$ 240,00 termina em:
-                        //- img.timer(src="https://s.mmgo.io/t/BwQT/scale_2x")
                         
                         h1.page-header-title.title A { Academia do Programador } vai te destravar!
                         h2.page-header-text Veja o que o Maurício e o Marcelo estão achando da { Academia do Programdor }.
@@ -185,6 +179,15 @@ block content
                             .video-container
                                 iframe(width="100%" height="450" src="https://player.vimeo.com/video/436121324" frameborder="0" allowfullscreen="")
 
+                .row.justify-content-center(style="padding-top: 2rem;")
+                    .col-xl-9.col-lg-10.text-center
+                    
+                        h2.page-header-text Últimas horas para conseguir a sua vaga ...
+                        img.timer(src="https://s.mmgo.io/t/BwhN/scale_2x")
+
+                        a.btn.btn-xl.btn-secondary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Sim, vou garantir a minha vaga AGORA!
+                        //- a.btn.btn-xl.btn-secondary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=fplj7erg&checkoutMode=10&split=12&bid=1589319974564") Sim, vou garantir a minha vaga COM DESCONTO!
+                        
 
     include mixins/header.pug
     +header({
@@ -272,9 +275,14 @@ block content
                                 i.text-orange(data-feather='alert-triangle')
                                 p.card-text.small.text-orange Somente para esta turma!
 
+                .row.justify-content-center(style="padding-top: 2rem;")
+                    .col-xl-9.col-lg-10.text-center
+                    
+                        h2.page-header-text Últimas horas para conseguir a sua vaga...
+                        img.timer(src="https://s.mmgo.io/t/BwhN/scale_2x")
 
-                    a.btn.btn-xl.btn-secondary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Sim, quero me tornar um programador!
-                    //- a.btn.btn-xl.btn-primary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=fplj7erg&checkoutMode=10&split=12&bid=1589319974564") Sim, quero me tornar um programador!
+                        a.btn.btn-xl.btn-secondary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Sim, quero me tornar um programador!
+                        //- a.btn.btn-xl.btn-primary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=fplj7erg&checkoutMode=10&split=12&bid=1589319974564") Sim, quero me tornar um programador!
                 
 
 
@@ -360,6 +368,9 @@ block content
 
                     .col-xl-10.col-lg-10.text-center(data-aos='slide-up')
                    
+                        h2.page-header-text As inscrições vão se encerrar em...
+                        img.timer(src="https://s.mmgo.io/t/BwhN/scale_2x")
+
                         a.btn.btn-xl.btn-primary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=nc94kftr&checkoutMode=10&split=12&bid=1589319974564") Sim, quero me tornar um programador!
                         //- a.btn.btn-xl.btn-primary.btn-block.rounded-pill.mt-5(href="https://pay.hotmart.com/A5013488A?off=fplj7erg&checkoutMode=10&split=12&bid=1589319974564") Sim, quero me tornar um programador!
                         
