--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -89,7 +89,7 @@ block content
                         img.timer(src="https://s.mmgo.io/t/BwhM/scale_3x")
                         
                         h1.page-header-title.title Inscrições abertas para a <br/>{ Academia do Programador }
-                        //h2.page-header-text Torne-se um programador profissional em até seis meses e seja disputado pelo mercado, mesmo que você nunca tenha feito um algorítmo na vida.
+                        h2.page-header-text Torne-se um programador profissional em até seis meses e seja disputado pelo mercado, mesmo que você nunca tenha feito um algorítmo na vida.
 
                         .video
                             .video-container
