fix log max width

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -410,7 +410,7 @@ block content
                         h1.page-header-title.title Inscrições encerradas!
                         h2.page-header-text As inscrições para a { Academia do Programador } estão fechadas neste momento.
 
-                        img(src="assets/img/logo-academia-do-programador-fundo-transparente.png" style="max-width=100%")
+                        img(src="assets/img/logo-academia-do-programador-fundo-transparente.png" style="max-width: 100%")
 
                 .row.align-items-center
                     .col-lg-6
