--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -66,6 +66,14 @@ append css
     //- meta(property="og:image" content="https://academiadoprogramador.com.br/inscricoes-abertas.png")
     //- meta(property="og:description" content="As inscrições para a { Academia do Programador } estão abertas. Não perca esta oportunidade!")
 
+    //Google Tag Manager
+    script.
+        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-TCCNDS4');
+
 block content
 
     //- * * * * * * * * * *
@@ -498,43 +506,13 @@ append scripts
             duration: 600,
             once: true
         });
-    //Facebook Pixel Code
+    //Google Tag Manager
     script.
-        !function(f,b,e,v,n,t,s)
-        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-        n.queue=[];t=b.createElement(e);t.async=!0;
-        t.src=v;s=b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t,s)}(window, document,'script',
-        'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '553205085377073');
-        fbq('track', 'PageView');
+        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-TCCNDS4');
     noscript
-        img(height="1", width="1", style="display:none", src="https://www.facebook.com/tr?id=553205085377073&ev=PageView&noscript=1")
-    //Mautic
-    script.
-        (function(w,d,t,u,n,a,m){w['MauticTrackingObject']=n;
-            w[n]=w[n]||function(){(w[n].q=w[n].q||[]).push(arguments)},a=d.createElement(t),
-            m=d.getElementsByTagName(t)[0];a.async=1;a.src=u;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//mautic.dicasdeprogramacao.com.br/mtc.js','mt');
-        mt('send', 'pageview');
-    //Global site tag (gtag.js) - Google Ads: 993243463
-    script(async, src="https://www.googletagmanager.com/gtag/js?id=AW-993243463")
-    script.
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'AW-993243463');
-        gtag('event', 'conversion', {'send_to': 'AW-993243463/gomoCKeam88BEMfiztkD'});
-    // Global site tag (gtag.js) - Google Analytics
-    script(async, src="https://www.googletagmanager.com/gtag/js?id=UA-171709654-1")
-    script.
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-171709654-1');
-
-    //JivoChat
-    //- script(async, src="//code.jivosite.com/widget/PSW9chLIyg")
-
+        iframe(src="https://www.googletagmanager.com/ns.html?id=GTM-TCCNDS4", height="0", width="0", style="display:none;visibility:hidden")
+    
